<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/line"
    android:orientation="vertical"
    tools:context="com.bm.fusionworker.views.setting.SettingsActivity">

    <com.bm.fusionworker.weights.NavBar
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_about_us"
        style="@style/textview2"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@drawable/list_selector"
        android:text="@string/about_us" />

    <TextView
        android:id="@+id/tv_help"
        style="@style/textview2"
        android:background="@drawable/list_selector"
        android:text="@string/helper" />


    <LinearLayout
        android:id="@+id/layout_version"
        style="@style/item_layout_simple"
        android:layout_margin="0dp"
        android:background="@drawable/list_selector"
        android:orientation="horizontal"
        android:padding="0dp">


        <TextView
            style="@style/textview2"
            android:layout_weight="1"
            android:text="@string/app_version" />


        <TextView
            android:id="@+id/tv_version"
            style="@style/textview2"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:paddingRight="@dimen/dp_5"
            android:textColor="@color/btn_blue" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_clause"
        style="@style/textview2"
        android:background="@drawable/list_selector"
        android:text="@string/juridical_canon" />

    <TextView
        android:id="@+id/tv_advice"
        style="@style/textview2"
        android:background="@drawable/list_selector"
        android:text="@string/feed_back" />

    <TextView
        android:id="@+id/contact_us_tv"
        style="@style/textview2"
        android:layout_centerVertical="true"
        android:background="@drawable/list_selector"
        android:text="@string/contact_us" />

    <TextView
        android:id="@+id/tv_login_out"
        style="@style/textview2"
        android:background="@drawable/list_selector"
        android:text="@string/log_out" />

    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/little_coner_blue_shape"
        android:gravity="center"
        android:text="@string/setting_exit"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_title" />

</LinearLayout>
