<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/line"
    android:orientation="vertical"
    tools:context="com.bm.fusionworker.views.mine.UserInfoActivity">

    <com.bm.fusionworker.weights.NavBar
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_portrait"
                style="@style/item_layout_simple"
                android:layout_height="70dp"
                android:background="@drawable/list_selector">

                <TextView
                    style="@style/textview"
                    android:layout_weight="1"
                    android:text="@string/head_iv" />

                <com.corelibs.views.roundedimageview.CircleImageView
                    android:id="@+id/iv_user_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/ic_launcher_round" />
            </LinearLayout>


            <ImageView
                style="@style/view_line"
                android:layout_height="@dimen/dp_13" />

            <LinearLayout
                android:id="@+id/layout_nick"
                style="@style/item_layout_simple"
                android:background="@drawable/list_selector">

                <TextView
                    style="@style/textview"
                    android:layout_weight="1"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/et_nick"
                    style="@style/textview"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:gravity="right|center_vertical"
                    android:hint="@string/write_name"
                    android:lines="1"
                    android:textColor="@color/app_blue" />
            </LinearLayout>

            <ImageView style="@style/view_line" />

            <LinearLayout
                android:id="@+id/layout_sex"
                style="@style/item_layout_simple"
                android:background="@drawable/list_selector">

                <TextView
                    style="@style/textview"
                    android:layout_weight="1"
                    android:text="@string/gender" />


                <TextView
                    android:id="@+id/tv_sex"
                    style="@style/textview"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:gravity="right|center_vertical"
                    android:maxLines="1"
                    android:textColor="@color/app_blue" />
            </LinearLayout>

            <ImageView style="@style/view_line" />

            <LinearLayout
                android:id="@+id/layout_hw1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    style="@style/item_layout_simple"
                    android:background="@drawable/list_selector">

                    <TextView
                        style="@style/textview"
                        android:layout_weight="1"
                        android:text="@string/department" />

                    <EditText
                        android:id="@+id/et_department"
                        style="@style/textview"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:gravity="right|center_vertical"
                        android:hint="@string/write_department"
                        android:lines="1"
                        android:textColor="@color/app_blue" />
                </LinearLayout>

                <ImageView style="@style/view_line" />

                <LinearLayout
                    style="@style/item_layout_simple"
                    android:background="@drawable/list_selector">

                    <TextView
                        style="@style/textview"
                        android:layout_weight="1"
                        android:text="@string/phone" />

                    <EditText
                        android:id="@+id/et_phone"
                        style="@style/textview"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:gravity="right|center_vertical"
                        android:hint="@string/write_phone"
                        android:lines="1"
                        android:textColor="@color/app_blue" />
                </LinearLayout>

                <ImageView style="@style/view_line" />

                <LinearLayout
                    style="@style/item_layout_simple"
                    android:background="@drawable/list_selector">

                    <TextView
                        style="@style/textview"
                        android:layout_weight="1"
                        android:text="@string/worker_number" />

                    <EditText
                        android:id="@+id/et_worker_number"
                        style="@style/textview"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:gravity="right|center_vertical"
                        android:hint="@string/write_worker_number"
                        android:lines="1"
                        android:textColor="@color/app_blue" />
                </LinearLayout>

                <ImageView style="@style/view_line" />

                <LinearLayout
                    style="@style/item_layout_simple"
                    android:background="@drawable/list_selector">

                    <TextView
                        style="@style/textview"
                        android:layout_weight="1"
                        android:text="@string/user_type" />

                    <EditText
                        android:id="@+id/et_user_type"
                        style="@style/textview"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:gravity="right|center_vertical"
                        android:hint="@string/write_user_type"
                        android:lines="1"
                        android:textColor="@color/app_blue" />
                </LinearLayout>

                <ImageView style="@style/view_line" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_email"
                style="@style/item_layout_simple"
                android:background="@drawable/list_selector">

                <TextView
                    style="@style/textview"
                    android:layout_weight="1"
                    android:text="@string/email" />


                <EditText
                    android:id="@+id/tv_email"
                    style="@style/textview"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:gravity="right|center_vertical"
                    android:hint="填写邮箱"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:textColor="@color/app_blue" />
            </LinearLayout>

            <ImageView style="@style/view_line" />

            <LinearLayout
                android:id="@+id/w3_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    style="@style/item_layout_simple"
                    android:background="@drawable/list_selector">

                    <TextView
                        style="@style/textview"
                        android:layout_weight="1"
                        android:text="@string/w3account" />

                    <EditText
                        android:id="@+id/et_w3"
                        style="@style/textview"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:gravity="right|center_vertical"
                        android:hint="@string/write_w3account"
                        android:lines="1"
                        android:textColor="@color/app_blue" />
                </LinearLayout>

                <ImageView style="@style/view_line" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_birthday"
                style="@style/item_layout_simple"
                android:background="@drawable/list_selector">

                <TextView
                    style="@style/textview"
                    android:layout_weight="1"
                    android:text="@string/birthday" />

                <TextView
                    android:id="@+id/tv_birthday"
                    style="@style/textview"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:gravity="right|center_vertical"
                    android:hint="@string/write_birthday"
                    android:textColor="@color/app_blue" />
            </LinearLayout>

            <ImageView style="@style/view_line" />

            <LinearLayout
                android:id="@+id/layout_address"
                style="@style/item_layout_simple"
                android:background="@drawable/list_selector">

                <TextView
                    style="@style/textview"
                    android:layout_weight="1"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/tv_address"
                    style="@style/textview"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:gravity="right|center_vertical"
                    android:hint="@string/write_address"
                    android:lines="1"
                    android:textColor="@color/app_blue" />
            </LinearLayout>

            <ImageView style="@style/view_line" />

            <TextView
                android:id="@+id/commit_userinfo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginBottom="@dimen/dp_30"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@drawable/blue_shape_bg"
                android:gravity="center"
                android:text="@string/action_submit"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_title"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
