<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/pile_status_normal_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_height"
        android:gravity="center"
        android:text="@string/pile_status_normal" />

    <View style="@style/line" />

    <TextView
        android:id="@+id/pile_status_using_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_height"
        android:gravity="center"
        android:text="@string/pile_status_using" />

    <View style="@style/line" />

    <TextView
        android:id="@+id/pile_status_stopped_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_height"
        android:gravity="center"
        android:text="@string/pile_status_stopped" />

    <View style="@style/line" />
</LinearLayout>
