<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_height"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/title_tv"
            style="@style/repair_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_toLeftOf="@id/time_tv"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/repair_bean_title" />

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:drawableLeft="@drawable/icon_time"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="center|center_vertical"
            android:text="@string/repair_bean_time" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_alignParentBottom="true"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_location" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15">

            <TextView
                android:id="@+id/distance_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="距离您500米" />

            <TextView
                android:id="@+id/address_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/distance_tv"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/address" />

            <TextView
                android:id="@+id/status_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/red_conner_shape_bg"
                android:paddingBottom="@dimen/dp_5"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:text="@string/status_unconfirmed"
                android:textColor="@color/white" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
